--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -41,7 +41,7 @@ numprocs=1
 numprocs_start=1
 
 [program:roadpin-frontend]
-command=/srv/roadpin/roadpin-frontend/scripts/server2.sh
+command="source /etc/profile.d/rvm.sh; rm -rf _public; /srv/roadpin/roadpin-frontend/node_modules/brunch/bin/brunch watch --server -P"
 process_name=roadpin-frontend
 user=roadpin
 directory=/srv/roadpin/roadpin-frontend
