--- a/roadpin-frontend/bower.json
+++ b/roadpin-frontend/bower.json
@@ -10,6 +10,7 @@
     "angular-cookies": "~1.2.0-rc.2",
     "angular-sanitize": "~1.2.0-rc.2",
     "angular-resource": "~1.2.0-rc.2",
+    "angular-ui-map": "~0.0.2",
     "json3": "~3.2.4",
     "bootstrap-sass": "~3.0.0",
     "jquery": "~2.0.0"
